include(FetchContent)
FetchContent_Declare(
    googletest
    URL     https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
    DOWNLOAD_EXTRACT_TIMESTAMP true  # Specify the option here
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)
add_executable(
   cpp_test
   cpp_test.cc
)

target_link_libraries(
    cpp_test
    GTest::gtest_main
    cpp
)
include(GoogleTest)
gtest_discover_tests(cpp_test)
