(library
  (name reader)
  (modules reader))

(library
 (name day1)
 (modules day1)
 (libraries re))

(library
  (name day2)
  (modules day2))

(library
  (name day3)
  (modules day3))

(library
  (name day4)
  (modules day4))

(library
  (name day5)
  (modules day5)
  (libraries re))

(library
  (name day6)
  (modules day6)
  (libraries re))

(library
  (name day7)
  (modules day7)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
  (libraries fmt ppx_deriving))

