(library
  (name reader)
  (modules reader))

(library
 (name day1)
 (modules day1)
 (libraries re))

(library
  (name day2)
  (modules day2))

(library
  (name day3)
  (modules day3))

(library
  (name day4)
  (modules day4))

(library
  (name day5)
  (modules day5)
  (libraries re))

(library
  (name day6)
  (modules day6)
  (libraries re))

(library
  (name day7)
  (modules day7)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
  (libraries fmt ppx_deriving))

(library
  (name day8)
  (modules day8)
  (preprocess (pps ppx_deriving.show))
  (libraries fmt re ppx_deriving))

(library
  (name day9)
  (modules day9)
  (libraries fmt))

(library
  (name day10)
  (modules day10)
  (libraries fmt))

(library
  (name day11)
  (modules day11)
  (libraries fmt))

(library
  (name day12)
  (modules day12)
  (libraries fmt))

(library
  (name day13)
  (modules day13)
  (libraries fmt re))
